--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <h2><span class="orange-highlit">FOOD</span> NETWORK</h2>
         <p>Eat Healthy To Live Healthy. Live Healthy To Live Happy </p>
-        <h4>ismail.sujan@gmail.com</h4>
+        <h4>ismail.sujan11@gmail.com</h4>
         <a class="link-lago" href="https://www.linkedin.com/in/sujan-ahmmad-77a828214/" target="_blank"><img
                 src="./images/Linkedin-Logo.png" alt=""></a>
         <a class="link-lago" href="https://twitter.com/SujanAhmmad1" target="_blank"><img src="./images/twitter.jpg"
