--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <button class="button"> Contuct</button>
     </section>
 
+
     <section class="flaxibal-continar">
         <div class="half-width">
             <h1> <span class="orange-highlit">Skip</span> The Diet, <br> Just Eat Healthy With Food Network </h1>
@@ -33,6 +34,7 @@
             <img src="./images/male/sujan-1.png" alt="Sujan image">
         </div>
     </section>
+
 
     <section class="about flaxibal-continar">
         <div class="half-width">
@@ -47,6 +49,7 @@
             <a class="link-button" target="_blank" href="https://www.facebook.com/MIAS2014/">Contact me</a>
         </div>
     </section>
+
 
     <section>
         <h2 class="recipics">My Recipies</h2>
@@ -64,6 +67,7 @@
                     cookbook name very easily.</p>
             </div>
         </div>
+
         <div class="recipics-banner">
             <div>
                 <img src="./images/food/Project Cover.png" alt="">
@@ -87,6 +91,8 @@
         </div>
 
     </section>
+
+
     <footer>
 
         <h2><span class="orange-highlit">FOOD</span> NETWORK</h2>
@@ -98,7 +104,7 @@
                 alt=""></a>
         <a class="link-lago" href="https://www.instagram.com/ismailahammadsujan/h" target="_blank"><img
                 src="./images/instagram.png" alt=""></a>
-        <p class="copyright">©2021 <span class="shah">Sujan Ahmmad</span> All rights reserved </p>
+        <p class="copyright">©2021 Sujan Ahmmad All rights reserved </p>
     </footer>
 
 </body>
